fixed weird spacing on space area due to flex height

--- a/src/sass/2_layouts/_footer.scss
+++ b/src/sass/2_layouts/_footer.scss
@@ -5,6 +5,7 @@
   .container {
     min-height: 50px;
     display: flex;
+    margin-top: 50px;
     justify-content: center;
     align-items: center;
   }
