--- a/src/sass/2_layouts/components/_recordTemplate.scss
+++ b/src/sass/2_layouts/components/_recordTemplate.scss
@@ -72,6 +72,7 @@
   display: inline-block;
   cursor: pointer;
   padding: 10px 30px;
+  margin-top: 10px;
   background-color: rgb(0, 11, 34);
   color: rgb(233, 168, 4);
   border-radius: 2px;
